kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trace-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: tracetrade.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trace-deployment
            port:
              number: 8080
  tls:
  - hosts:
    - tracetrade.xyz
    secretName: trace-tls2
